--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
     "test": "npm run test:unit -- --run"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241218.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-cloudflare": "^4.8.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.7.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "nx": "20.1.4",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3",
+    "vite": "^6.0.0",
     "vitest": "^2.0.4",
-    "nx": "20.1.4"
+    "wrangler": "^3.98.0"
   },
   "dependencies": {
     "@giscus/svelte": "^3.0.0",
