--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
     "test:unit": "vitest",
-    "test": "npm run test:unit -- --run"
+    "test": "npm run test:unit -- --run",
+    "deploy": "pnpm run build && wrangler deploy",
+    "cf-typegen": "wrangler types && move worker-configuration.d.ts src/"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
