--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "my-svelte-app"
-compatibility_date = "2024-12-18"
+compatibility_date = "2024-12-05"
+compatibility_flags = ["nodejs_compat"]
 main = ".svelte-kit/cloudflare/_worker.js"
 assets = { directory = ".svelte-kit/cloudflare", binding = "ASSETS" }
 
