--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "nx": "20.1.4",
+    "slugify": "^1.6.6",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.9",
