--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "my-svelte-app"
+name = "firdausng-site-worker-app"
 compatibility_date = "2024-12-05"
 compatibility_flags = ["nodejs_compat"]
 main = ".svelte-kit/cloudflare/_worker.js"
@@ -8,8 +8,7 @@ assets = { directory = ".svelte-kit/cloudflare", binding = "ASSETS" }
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
 # Configuration: https://developers.cloudflare.com/workers/observability/logs/workers-logs/#enable-workers-logs
-[observability]
-enabled = true
+observability = {enabled = true}
 
 vars = { MY_VARIABLE = "from local wrangler.toml" }
 
