Add Nx integration with SvelteKit and improve setup guides
Introduce a new blog post covering Nx usage with SvelteKit, including setup instructions and caching advantages. Update existing posts to use `npx sv create` for consistency, and refine `nx.json` to fix paths and cache additional deployment scripts. Non-breaking, improves clarity and developer workflow.

--- a/nx.json
+++ b/nx.json
@@ -3,7 +3,7 @@
   "targetDefaults": {
     "build": {
       "outputs": [
-        "{projectRoot}/.svelte-kit/cloudflare"
+        "{projectRoot}/.sveltekit"
       ],
       "cache": true
     },
@@ -23,6 +23,12 @@
       "cache": true
     },
     "test": {
+      "cache": true
+    },
+    "deploy:dev": {
+      "cache": true
+    },
+    "deploy": {
       "cache": true
     }
   },
