--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "mdsvex": "^0.12.3",
+    "posthog-js": "^1.210.2",
     "rehype-slug": "^6.0.0",
     "rehype-unwrap-images": "^1.0.0",
     "remark-toc": "^9.0.0",
